--- a/styles/toys.css
+++ b/styles/toys.css
@@ -10,38 +10,49 @@ button:disabled {background-color:#C7C1C1;}
 
 
  /* хлебные крошки */
-.breadcrumps {
+.breadcrumbs {
     display: flex;
     flex-direction: column;
 }
 /* заголовок */
-.breadcrumps__title {
+.breadcrumbs__title {
     font-family: 'Montserrat', sans-serif;
     font-size: 40px;
     margin:5px 0 0 0;
 }
-.breadcrumps__list {
+.breadcrumbs__list {
     display: flex;
     align-items: baseline;
     padding: 0;
     max-width: 229px;
     justify-content: space-between;
-    margin-top: -6px;
-    margin-bottom: 30px;
+    margin-top: 15px;
+    margin-bottom: 48.8px;
 }
-
+.breadcrumbs__list-item:not(:last-child)::after {
+    display: inline-block;
+    content: "";
+    border-top: 2px solid #1E0606;
+    border-right: 2px solid #1E0606;
+    transform: rotate(45deg);
+    width: 7px;
+    height: 7px;
+    margin:0 0 1px 14px;
+}
 /* текст */
-.breadcrumps__list-text {
+.breadcrumbs__list-text,
+.breadcrumbs__list-link {
     font-family: 'Crimson Text', sans-serif;
     font-style: italic;
     font-size: 20px;
     line-height: 26px;
+    color: #000;
 }
-.breadcrumps__list-toys {
+.breadcrumbs__list-text {
     letter-spacing: 0.6px;
 }
 /* прозрачность */
-.breadcrumps__list-toys {
+.breadcrumbs__list-text {
     opacity: 50%;
 }
 
@@ -115,7 +126,6 @@ button:disabled {background-color:#C7C1C1;}
 .div__form-label {
     position: relative;
     padding-left: 30px;
-
 }
 
 .div__form-label::after,
@@ -128,10 +138,10 @@ button:disabled {background-color:#C7C1C1;}
     height: 19px;
 }
 .div__form-checkbox + .div__form-label::after {
-    background-image: url(../images/toys/checkbox.png);
+    background-image: url(../images/toys/checkbox.svg);
 }
 .div__form-checkbox:checked + .div__form-label::before {
-    background-image: url(../images/toys/checkbox-activ.png);
+    background-image: url(../images/toys/checkboxActiv.svg);
 }
 
 /* радиокнопки */
@@ -188,14 +198,18 @@ button:disabled {background-color:#C7C1C1;}
     background-color: #fff;
 }
 .div__form-activ {
-    background-color: #F3D0DB;
     padding: 8px 27px;
 }
 .div__form-button:hover {
     background-color: #EDDEEB;
 }
+.div__form-button:focus {
+    background-color: #F3D0DB;
+}
  /* Кнопка */
-
+.div__form-pic {
+    background-color: #000;
+}
 .div__form-btn {
     margin-top: 51px;
     margin-left: -10px;
@@ -214,15 +228,42 @@ button:disabled {background-color:#C7C1C1;}
     padding: 0;
 }
 .cards__list-item {
+    position: relative;
     display: flex;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
 }
+.cards__list-link {
+    position: absolute;
+    font-family: 'Montserrat',sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    text-align: center;
+    color: #1E0606;
+    padding: 90px 13px;
+    background-color: #E5EAF8;
+    margin-bottom: 130px;
+}
+.cards__list-img {
+    margin-bottom: 4.5px;
+}
+.cards__list-link {
+    opacity: 0;
+}
+.cards__list-link:hover {
+    opacity: 0.9;
+}
+.cards__list-link:active {
+    opacity: 0.67;
+}
+
 .cards__list-text {
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
-    margin-top: 32px;
+    margin-top: 27.5px;
     font-weight: 500;
+    
 }
 .cards__list-subtitle {
     font-family: 'Open Sans', sans-serif;
@@ -234,15 +275,78 @@ button:disabled {background-color:#C7C1C1;}
     margin-top: 4px;
 }
 
+
 /* переключатели */
 .cards__click {
     display: flex;
     justify-content: space-between;
     margin-top: 0;
     padding: 0;
-    margin-bottom: 48px;
+    margin-bottom: 41px;
     align-items: center;
 }
+.cards__click-control {
+    position: relative;
+    display: inline-flex;
+    width: 37px;
+    height: 37px;
+    padding: 0;
+    margin-top: 20px;
+    margin-right: 5px;
+}
+.cards__click-btn {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background-color: transparent;
+    display: inline-flex;
+    padding: 0;
+}
+.cards__click-arrowLeft {
+    border-top: 4px solid #1E06061F;
+    border-left: 4px solid #1E06061F;
+    transform: rotate(-45deg);
+    margin: -4px 0 0 5px;
+}
+.cards__click-arrowRight {
+    border-top: 4px solid #1E06061F;
+    border-right: 4px solid #1E06061F;
+    transform: rotate(45deg);
+    margin: -4px 0 0 17px;
+}
+.cards__click-arrowLeft:hover,
+.cards__click-arrowRight:hover {
+    background-color: transparent;
+}
+.cards__click-arrowLeft:hover {
+    border-top: 4px solid #C29974;
+    border-left: 4px solid #C29974;
+    transform: rotate(-45deg);
+}
+.cards__click-arrowRight:hover {
+    border-top: 4px solid #C29974;
+    border-right: 4px solid #C29974;
+    transform: rotate(45deg);
+    margin-left: 16px;
+}
+.cards__click-arrowLeft:active,
+.cards__click-arrowRight:active {
+    background-color: transparent;
+    opacity: 0.7;
+}
+.cards__click-arrowLeft:active {
+    border-top: 4px solid #C29974;
+    border-left: 4px solid #C29974;
+    transform: rotate(-45deg);
+}
+
+.cards__click-arrowRight:active {
+    border-top: 4px solid #C29974;
+    border-right: 4px solid #C29974;
+    transform: rotate(45deg);
+    margin-left: 16px;
+}
+
 .cards__click-numbers {
     display:flex;
     justify-content: space-between;
@@ -250,6 +354,8 @@ button:disabled {background-color:#C7C1C1;}
     font-family: 'Montserrat';
     font-weight: 700;
     font-size: 16px;
+    cursor: pointer;
+    margin-bottom: 5px;
 }
 .cards__click-number:hover {
     color:#AAAAAA ;
@@ -258,11 +364,3 @@ button:disabled {background-color:#C7C1C1;}
     color: #C29974;
 }
 
-
-.footer__info-btn {
-    font-family: 'Open Sans', sans-serif;
-    padding: 12px 22.5px 10px 22.5px;
-}
-.footer {
-    padding-top: 69px;
-}
